@@ -8,7 +8,7 @@
 /**
  * The current system version.
  */
-define('VERSION', '7.71');
+define('VERSION', '7.72');
 
 /**
  * Core API compatibility.
